--- a/views/partials/second-nav.ejs
+++ b/views/partials/second-nav.ejs
@@ -1,23 +1,37 @@
-<ul class="nav justify-content-center mt-4 mb-1">
+<ul class="nav justify-content-center mt-4 mb-1 text-uppercase">
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset" aria-current="page" href="/voistlus/info">
+    <a
+      class="nav-link text-reset fs-6 fw-bold"
+      aria-current="page"
+      href="/voistlus/info"
+    >
       Võistluse info
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset" href="/voistlus/paigutus">Paigutus</a>
+    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/paigutus">
+      Paigutus
+    </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset" href="/voistlus/tabel">Võistlustabel</a>
+    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/tabel">
+      Võistlustabel
+    </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset" href="/voistlus/mangud">Mängud</a>
+    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/mangud">
+      Mängud
+    </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset" href="/voistlus/tulemused">Tulemused</a>
+    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/tulemused">
+      Tulemused
+    </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset" href="/voistlus/auhinnad">Auhinnad</a>
+    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/auhinnad">
+      Auhinnad
+    </a>
   </li>
 </ul>
 <div
