--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,7 @@
         <span>&nbsp;Raplamaa Lauatennis</span>
       </a>
     </div>
+
     <button
       class="navbar-toggler"
       type="button"
@@ -22,26 +23,31 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div
       class="navbar-list collapse navbar-collapse justify-content-end"
       id="navbar-list"
     >
       <ul class="navbar-nav text-uppercase fw-bold">
-        <li class="nav-item nav-underline-anim">
+        <li class="nav-item nav-underline-anim me-2">
+          <a class="nav-link text-dark" href="/">Avaleht</a>
+        </li>
+        <li class="nav-item nav-underline-anim me-2">
           <a class="nav-link text-dark" href="/ajakava">Ajakava</a>
         </li>
-        <li class="nav-item nav-underline-anim">
+        <li class="nav-item nav-underline-anim me-2">
+          <a class="nav-link text-dark" href="/tulemused">Tulemused</a>
+        </li>
+        <li class="nav-item nav-underline-anim me-2">
           <a class="nav-link text-dark" href="/voistlusjuhend">
             V&otilde;istlusjuhend
           </a>
         </li>
-        <li class="nav-item nav-underline-anim">
-          <a class="nav-link text-dark" href="/tulemused">Tulemused</a>
-        </li>
-        <li class="nav-item nav-underline-anim">
+        <li class="nav-item nav-underline-anim me-2">
           <a class="nav-link text-dark" href="/treeningud">Treeningud</a>
         </li>
       </ul>
+
       <a
         class="btn btn-outline-secondary d-lg-inline-block my-2 my-md-0 ms-md-3"
         href="/voistlus/lisa"
