Add, edit schedule, api updated

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
           <a class="nav-link text-dark" href="/tulemused">Tulemused</a>
         </li>
         <li class="nav-item nav-underline-anim me-2">
-          <a class="nav-link text-dark" href="/voistlusjuhend">
+          <a class="nav-link text-dark" href="/voistlus/juhend">
             V&otilde;istlusjuhend
           </a>
         </li>
@@ -50,7 +50,7 @@
 
       <a
         class="btn btn-outline-secondary d-lg-inline-block my-2 my-md-0 ms-md-3"
-        href="/voistlus/lisa"
+        href="/kasutajad/toolaud"
       >
         Logi sisse
       </a>
