--- a/views/schedule-edit-single.ejs
+++ b/views/schedule-edit-single.ejs
@@ -26,68 +26,68 @@
         >
           <div class="row mb-3">
             <div class="col">
-              <label class="fw-bold" for="competitionDate">Kuupäev</label>
-              <input type="date" class="form-control" id="competitionDate" />
+              <label class="fw-bold" for="scheduleDate">Kuupäev</label>
+              <input type="date" class="form-control" id="scheduleDate" />
             </div>
             <div class="col">
-              <label class="fw-bold" for="competitionTime">Kellaaeg</label>
-              <input type="time" class="form-control" id="competitionTime" />
+              <label class="fw-bold" for="scheduleTime">Kellaaeg</label>
+              <input type="time" class="form-control" id="scheduleTime" />
             </div>
           </div>
 
           <div class="mb-3">
-            <label class="fw-bold" for="competitionName">Võistluse nimi</label>
+            <label class="fw-bold" for="scheduleName">Võistluse nimi</label>
             <input
               type="text"
               class="form-control"
-              id="competitionName"
+              id="scheduleName"
               autofocus
             />
           </div>
 
           <div class="mb-3">
-            <label class="fw-bold" for="competitionLocation">
+            <label class="fw-bold" for="scheduleLocation">
               Võistluskoht
             </label>
-            <input type="text" class="form-control" id="competitionLocation" />
+            <input type="text" class="form-control" id="scheduleLocation" />
           </div>
 
           <div class="row mb-3">
             <div class="col">
-              <label class="fw-bold" for="competitionUmpire">Kohtunik</label>
-              <input type="text" class="form-control" id="competitionUmpire" />
+              <label class="fw-bold" for="scheduleUmpire">Kohtunik</label>
+              <input type="text" class="form-control" id="scheduleUmpire" />
             </div>
             <div class="form-group col-md-6">
-              <label class="fw-bold" for="competitionUmpireContact">
+              <label class="fw-bold" for="scheduleUmpireContact">
                 Kontakttelefon
               </label>
               <input
                 type="tel"
                 class="form-control"
-                id="competitionUmpireContact"
+                id="scheduleUmpireContact"
               />
             </div>
           </div>
 
           <div class="row mb-3">
             <div class="col">
-              <label class="fw-bold" for="competitionOrganizer">
+              <label class="fw-bold" for="scheduleOrganizer">
                 Korraldaja
               </label>
               <input
                 type="text"
                 class="form-control"
-                id="competitionOrganizer"
+                id="scheduleOrganizer"
               />
             </div>
             <div class="form-group col-md-6">
-              <label class="fw-bold" for="competitionOrganizerContact">
+              <label class="fw-bold" for="scheduleOrganizerContact">
                 Kontakttelefon
               </label>
               <input
                 type="tel"
                 class="form-control"
-                id="competitionOrganizerContact"
+                id="scheduleOrganizerContact"
               />
             </div>
           </div>
