--- a/views/users-dashboard.ejs
+++ b/views/users-dashboard.ejs
@@ -50,6 +50,26 @@
             </div>
           </div>
         </div>
+
+        <div class="row my-4">
+          <div class="col">
+            <div class="card text-center w-50">
+              <div class="card-header">
+                <h5 class="card-title">Reitingu uuendamine</h5>
+              </div>
+              <div class="card-body">
+                <div class="my-3 d-grid gap-3 col-6 mx-auto">
+                  <a
+                    class="btn btn-secondary btn-lg"
+                    href="/reitingu-uuendamine"
+                  >
+                    Alusta uuendamisega
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
