registration ui add/remove from reg players table

--- a/views/competition-register.ejs
+++ b/views/competition-register.ejs
@@ -167,7 +167,7 @@
                 <th scope="col">Nimi</th>
                 <th class="text-center" scope="col">Sünniaeg</th>
                 <th class="text-center" scope="col">Sugu</th>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Toimingud">Toimingud</th>
+                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Toimingud">#</th>
               </tr>
             </thead>
             <tbody id="registerTableBody"></tbody>
