comp games page get players with axios from api

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,15 +70,14 @@
               <div class="card-body">
                 <h5 class="card-title">
                   <a
-                    href="/tulemused"
+                    href="/voistlus"
                     class="text-underline-hover text-reset text-underline-hove text-uppercase fw-bold stretched-link"
                   >
-                    Tulemused
+                    VÕISTLUSED
                   </a>
                 </h5>
                 <p class="card-text">
-                  Ülevaade Raplamaa lauatennise võistluste tulemustest. Kogu
-                  info tulemustest, osalejatest ja muudest detailidest
+                  Ülevaade Raplamaa lauatennise võistluste tulemustest. Info toimunud võistlustest ja nende tulemused
                 </p>
               </div>
             </div>
