--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
           <a class="nav-link text-dark" href="/ajakava">Ajakava</a>
         </li>
         <li class="nav-item nav-underline-anim me-2">
-          <a class="nav-link text-dark" href="/tulemused">Tulemused</a>
+          <a class="nav-link text-dark" href="/voistlus">Võistlused</a>
         </li>
         <li class="nav-item nav-underline-anim me-2">
           <a class="nav-link text-dark" href="/voistlus/juhend">
