--- a/views/competition-games.ejs
+++ b/views/competition-games.ejs
@@ -2,6 +2,7 @@
 <html class="h-100 wxauktc idc0_332" lang="et">
   <head>
     <%- include('./partials/head'); %>
+    <script src="/js/axios-v0.26.0.min.js" defer></script>
     <script src="/js/competition-games-script.js" defer></script>
   </head>
 
@@ -14,6 +15,7 @@
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
         <div>
+          <h5 class="text-uppercase fw-bold text-center"><span id="competitionName"></span></h5>
           <h5 class="text-uppercase fw-bold text-center mb-4">Mängud</h5>
         </div>
 
