comp games logic setup

--- a/views/competition-games.ejs
+++ b/views/competition-games.ejs
@@ -15,7 +15,9 @@
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
         <div>
-          <h5 class="text-uppercase fw-bold text-center"><span id="competitionName"></span></h5>
+          <h5 class="text-uppercase fw-bold text-center">
+            <span id="competitionName"></span>
+          </h5>
           <h5 class="text-uppercase fw-bold text-center mb-4">Mängud</h5>
         </div>
 
@@ -132,7 +134,7 @@
               <th class="text-center">Toimingud</th>
             </tr>
           </thead>
-          <tbody id="competitionGameTable"></tbody>
+          <tbody id="compGameTableBody"></tbody>
         </table>
       </div>
     </main>
