matches logic creation

--- a/views/schedule-edit.ejs
+++ b/views/schedule-edit.ejs
@@ -22,6 +22,7 @@
           <thead class="table-secondary">
             <tr>
               <th class="text-center">Kuupäev</th>
+              <th class="text-center">Algusaeg</th>
               <th>Võistluse nimetus</th>
               <th>Võistluse asukoht</th>
               <th class="text-center">Toimingud</th>
