--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -33,6 +33,7 @@
           <thead class="table-secondary">
             <tr>
               <th class="text-center">Kuupäev</th>
+              <th class="text-center">Algusaeg</th>
               <th>Võistluse nimetus</th>
               <th>Võistluse asukoht</th>
             </tr>
