--- a/views/partials/second-nav.ejs
+++ b/views/partials/second-nav.ejs
@@ -1,6 +1,7 @@
 <ul class="nav justify-content-center mt-4 mb-1 text-uppercase">
   <li class="nav-underline-anim">
     <a
+      id="linkInfo"
       class="nav-link text-reset fs-6 fw-bold"
       aria-current="page"
       href="/voistlus/info"
@@ -9,27 +10,27 @@
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/paigutus">
+    <a id="linkPaigutus" class="nav-link text-reset fs-6 fw-bold" href="#">
       Paigutus
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/tabel">
+    <a id="linkTabel" class="nav-link text-reset fs-6 fw-bold" href="#">
       Võistlustabel
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/mangud">
+    <a id="linkMangud" class="nav-link text-reset fs-6 fw-bold" href="#">
       Mängud
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/tulemused">
+    <a id="linkTulemused" class="nav-link text-reset fs-6 fw-bold" href="#">
       Tulemused
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a class="nav-link text-reset fs-6 fw-bold" href="/voistlus/auhinnad">
+    <a id="linkAuhinnad" class="nav-link text-reset fs-6 fw-bold" href="#">
       Auhinnad
     </a>
   </li>
