placement logic finished

--- a/views/competition-results.ejs
+++ b/views/competition-results.ejs
@@ -3,6 +3,7 @@
   <head>
     <%- include('./partials/head'); %>
     <script src="/js/axios-v0.26.0.min.js" defer></script>
+    <script src="/js/moment-v2.29.1.js" defer></script>
     <script src="/js/competition-results-script.js" defer></script>
   </head>
 
@@ -14,6 +15,9 @@
 
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
+        <h5 class="text-uppercase fw-bold text-center">
+          <span id="competitionName"></span>
+        </h5>
         <div>
           <h5 class="text-uppercase fw-bold text-center mb-3">Tulemused</h5>
         </div>
