registreeri registreeritud mängijad sorteerimise parandus

--- a/views/partials/second-nav.ejs
+++ b/views/partials/second-nav.ejs
@@ -4,33 +4,33 @@
       id="linkInfo"
       class="nav-link text-reset fs-6 fw-bold"
       aria-current="page"
-      href="/voistlus/info"
+      href=""
     >
       Võistluse info
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a id="linkPaigutus" class="nav-link text-reset fs-6 fw-bold" href="#">
+    <a id="linkPaigutus" class="nav-link text-reset fs-6 fw-bold" href="">
       Paigutus
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a id="linkTabel" class="nav-link text-reset fs-6 fw-bold" href="#">
+    <a id="linkTabel" class="nav-link text-reset fs-6 fw-bold" href="">
       Võistlustabel
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a id="linkMangud" class="nav-link text-reset fs-6 fw-bold" href="#">
+    <a id="linkMangud" class="nav-link text-reset fs-6 fw-bold" href="">
       Mängud
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a id="linkTulemused" class="nav-link text-reset fs-6 fw-bold" href="#">
+    <a id="linkTulemused" class="nav-link text-reset fs-6 fw-bold" href="">
       Tulemused
     </a>
   </li>
   <li class="nav-underline-anim">
-    <a id="linkAuhinnad" class="nav-link text-reset fs-6 fw-bold" href="#">
+    <a id="linkAuhinnad" class="nav-link text-reset fs-6 fw-bold" href="">
       Auhinnad
     </a>
   </li>
