info, awards functionality added

--- a/views/competition-placement.ejs
+++ b/views/competition-placement.ejs
@@ -28,7 +28,6 @@
               <th class="text-center" scope="col">Paigutus</th>
               <th scope="col">Eesnimi</th>
               <th scope="col">Perekonnanimi</th>
-
               <th
                 class="text-center"
                 scope="col"
@@ -38,6 +37,26 @@
                 data-bs-original-title="Eesti Lauatennise Liidu võistleja ID"
               >
                 ELTLID
+              </th>
+              <th
+                class="text-center"
+                scope="col"
+                data-bs-toggle="tooltip"
+                data-bs-placement="top"
+                title=""
+                data-bs-original-title="Nr = koht reitingus"
+              >
+                Nr
+              </th>
+              <th
+                class="text-center"
+                scope="col"
+                data-bs-toggle="tooltip"
+                data-bs-placement="top"
+                title=""
+                data-bs-original-title="RP = reitingupunktid"
+              >
+                RP
               </th>
               <th class="text-center" scope="col">Sünniaeg</th>
               <th class="text-center" scope="col">Sugu</th>
