--- a/views/competition-awards.ejs
+++ b/views/competition-awards.ejs
@@ -2,7 +2,9 @@
 <html class="h-100 wxauktc idc0_332" lang="et">
   <head>
     <%- include('./partials/head'); %>
-    <!-- <script src="/js/competition-games-script.js" defer></script> -->
+    <script src="/js/axios-v0.26.0.min.js" defer></script>
+    <script src="/js/moment-v2.29.1.js" defer></script>
+    <script src="/js/competition-awards-script.js" defer></script>
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -14,6 +16,11 @@
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
         <div>
+          <h5 class="text-uppercase fw-bold text-center">
+            <span id="competitionName">
+              Raplamaa seeriavõistluse 7. etapp - Valtu auhindadele
+            </span>
+          </h5>
           <h5 class="text-uppercase fw-bold text-center mb-4">Auhinnad</h5>
         </div>
         <!-- Üldvõitja, ehk I koht -->
@@ -24,7 +31,7 @@
             </div>
             <i class="fas fa-trophy fa-9x my-4 mx-auto"></i>
             <div class="card-body">
-              <h1 class="">VEIKO</h1>
+              <h1 id="compFirstPlace" class=""></h1>
             </div>
           </div>
         </div>
@@ -38,7 +45,7 @@
               </div>
               <i class="fas fa-trophy fa-7x my-3 mx-auto"></i>
               <div class="card-body">
-                <h1 class="">HEINO KRUUSEMENT</h1>
+                <h1 id="compSecondPlace" class=""></h1>
               </div>
             </div>
           </div>
@@ -49,7 +56,7 @@
               </div>
               <i class="fas fa-trophy fa-5x my-4 mx-auto"></i>
               <div class="card-body">
-                <h1 class="">ELLE ÕUN</h1>
+                <h1 id="compThirdPlace" class=""></h1>
               </div>
             </div>
           </div>
