--- a/views/competition-info.ejs
+++ b/views/competition-info.ejs
@@ -2,6 +2,9 @@
 <html class="h-100 wxauktc idc0_332" lang="et">
   <head>
     <%- include('./partials/head'); %>
+    <script src="/js/axios-v0.26.0.min.js" defer></script>
+    <script src="/js/moment-v2.29.1.js" defer></script>
+    <script src="/js/competition-info-script.js" defer></script>
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -13,22 +16,20 @@
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
         <div>
+          <h5 class="text-uppercase fw-bold text-center">
+            <span id="compName"></span>
+          </h5>
           <h5 class="text-uppercase fw-bold text-center mb-4">
             Võistluse info
           </h5>
           <div class="container w-50">
-            <h5 class="text-nowrap mb-3">
-              <span id="compName">
-                Raplamaa seeriavõistluse 1. etapp - Kaiu auhindadele
-              </span>
-            </h5>
             <p class="my-1">
               <span class="fw-bold">Võistluse kuupäev:</span>
-              <span id="compBeginningDate">23.10.2021</span>
+              <span id="compDate"></span>
             </p>
             <p class="my-1">
               <span class="fw-bold">Võistluse algusaeg:</span>
-              <span id="compBeginningTime">10:00</span>
+              <span id="compTime"></span>
             </p>
             <p class="my-1">
               <span class="fw-bold">Võistluskoht:</span>
@@ -37,16 +38,18 @@
                 href="#"
                 target="_blank"
               >
-                <span id="compLocation">Alu Spordihoone</span>
+                <span id="compLocation"></span>
               </a>
             </p>
             <p class="my-1">
-              <span class="fw-bold">Korraldaja:</span>
-              <span id="compOrganizer">Madis Pärn 501 2346</span>
+              <span class="fw-bold">Kohtunik:</span>
+              <span id="compUmpire"></span>
+              <span id="compUmpireContact"></span>
             </p>
             <p class="my-1">
-              <span class="fw-bold">Kohtunik:</span>
-              <span id="compUmpire">Kalju Kalda 501 2345</span>
+              <span class="fw-bold">Korraldaja:</span>
+              <span id="compOrganizer"></span>
+              <span id="compOrganizerContact"></span>
             </p>
             <p class="my-1"><span class="fw-bold">Osavõtutasu:</span></p>
             <ul>
@@ -58,7 +61,7 @@
               <span class="fw-bold">Võistlusjuhend:</span>
               <a
                 class="text-reset text-underline-hover text-nowrap"
-                href="/voistlusjuhend/"
+                href="/voistlus/juhend/"
                 target="_blank"
               >
                 Raplamaa lauatennise seeriavõistluse juhend 2021-2022
