--- a/views/competition-table.ejs
+++ b/views/competition-table.ejs
@@ -2,6 +2,9 @@
 <html class="h-100 wxauktc idc0_332" lang="et">
   <head>
     <%- include('./partials/head'); %>
+    <script src="/js/axios-v0.26.0.min.js" defer></script>
+    <script src="/js/moment-v2.29.1.js" defer></script>
+    <script src="/js/competition-table-script.js" defer></script>
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -13,6 +16,9 @@
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
         <div>
+          <h5 class="text-uppercase fw-bold text-center">
+            <span id="competitionName"></span>
+          </h5>
           <h5 class="text-uppercase fw-bold text-center fw-bold">
             Võistlustabel
           </h5>
